driver/tests/snap/type_error/pi_arity_mismatch/0_input.splic
// ERROR: too many arguments to a function-typed variable
def apply(f: fn(_: u64) -> u64, x: u64) -> u64 = {
    f(x, x)
};
